# srup

./: CMakeLists.rpi.txt  CMakeLists.txt  LICENCE.txt  README.md  SRUP.cpp  SRUP.h  SRUP_Action.cpp  SRUP_Action.h  SRUP_Activate.cpp  SRUP_Activate.h  SRUP_Crypto.cpp  SRUP_Crypto.h  SRUP_Data.cpp  SRUP_Data.h  SRUP_Deregister.cpp  SRUP_Deregister.h  SRUP_Deregister_Cmd.cpp  SRUP_Deregister_Cmd.h  SRUP_Generic.cpp  SRUP_Generic.h  SRUP_Group.cpp  SRUP_Group.h  SRUP_Group_Add.cpp  SRUP_Group_Add.h  SRUP_Group_Delete.cpp  SRUP_Group_Delete.h  SRUP_Group_Destroy.cpp  SRUP_Group_Destroy.h  SRUP_Human_Join.cpp  SRUP_Human_Join.h  SRUP_Human_Join_Resp.cpp  SRUP_Human_Join_Resp.h  SRUP_ID_REQ.cpp  SRUP_ID_REQ.h  SRUP_Init.cpp  SRUP_Init.h  SRUP_Join.cpp  SRUP_Join.h  SRUP_Join_Cmd.cpp  SRUP_Join_Cmd.h  (+41 more)
BackEnd/: config.conf  docker-compose.yml  keygen.py
BackEnd/KeyEx/: Dockerfile  requirements.txt  start.sh
BackEnd/KeyEx/KeyEx-Server/: KeyExReturn.py  KeyEx_Server.py  server.cfg  test_db_return.py  test_helper_functions.py
KeyExServer/: KeyExReturn.py  KeyEx_Server.py  KeyEx_helpers.py  README.md  database_functions.py  db_return.py  test_keyex_returns.py  wsgi.py
PCBs/: ex2device.kicad_pcb  ex2device.pro  ex2device.sch
PCBs/Gerber/: ex2device-B_Cu.gbr  ex2device-B_Mask.gbr  ex2device-B_Paste.gbr  ex2device-B_SilkS.gbr  ex2device-Edge_Cuts.gbr  ex2device-F_Cu.gbr  ex2device-F_Mask.gbr  ex2device-F_Paste.gbr  ex2device-F_SilkS.gbr  ex2device-NPTH-drl_map.gbr  ex2device-NPTH.drl  ex2device-PTH-drl_map.gbr  ex2device-PTH.drl  ex2device-job.gbrjob
Test/: readme.md  tests.cpp
TestDaemon/: SRUP_Daemon.cpp  SRUP_Daemon.h  main.cpp
TestDaemon/Fetcher/: fetcher.thrift  fetcher_service.py
TestServer/: C2_Interface.py  SRUP_Server.cpp  SRUP_Server.h  main.cpp
TestServer/thrift/: SRUP_Service.thrift
pySRUP/: pySRUP.cpp  pySRUP.h  pySRUPLib.cpp  pySRUP_Action.cpp  pySRUP_Action.h  pySRUP_Data.cpp  pySRUP_Data.h  pySRUP_Initiate.cpp  pySRUP_Initiate.h  pySRUP_Join.cpp  pySRUP_Join.h  pySRUP_Observed.cpp  pySRUP_Observed.h  pySRUP_Response.cpp  pySRUP_Response.h  pySRUP_Syndicated_Action.cpp  pySRUP_Syndicated_Action.h  pySRUP_Syndicated_C2_Request.cpp  pySRUP_Syndicated_C2_Request.h  pySRUP_Syndicated_Data.cpp  pySRUP_Syndicated_Data.h  pySRUP_Syndicated_Device_Count.cpp  pySRUP_Syndicated_Device_Count.h  pySRUP_Syndicated_Device_List.cpp  pySRUP_Syndicated_Device_List.h  pySRUP_Syndicated_ID_REQ.cpp  pySRUP_Syndicated_ID_REQ.h  pySRUP_Syndication_Init.cpp  pySRUP_Syndication_Init.h
pySRUP/Python/: CryptoFunctions.py  KeyEx_Client.py  deploy.sh  device.py  pySRUP.py  pySRUP_Exceptions.py  server-cli.py
pySRUP/Python/Hardware/LCD/: LCD.py  pg.py
pySRUP/Python/Hardware/ink/: inky.py  words.py
pySRUP/Python/WebC2/: LCD_device.py  config.cfg  form_classes.py  longwords.txt  pictogram.py  software_device.py  sw2.py  web_c2.py
pySRUP/Python/WebC2/templates/: 404.html  500.html  action.html  base.html  devices.html  graph.html  index.html  join_page.html  macros.html
pySRUP/Python/tests/: action_test.py  activate_test.py  data_test.py  deregister_command_test.py  deregister_request_test.py  generic_test.py  human_join_request_test.py  human_join_response_test.py  id_request_test.py  initiate_test.py  join_cmd_test.py  join_test.py  observation_request_test.py  observed_join_request_test.py  observed_join_response_test.py  other_test.py  resign_request_test.py  response_test.py  syndicated_action_test.py  syndicated_c2_request_test.py  syndicated_data_test.py  syndicated_device_count_test.py  syndicated_device_list_test.py  syndicated_id_request_test.py  syndication_end_req_test.py  syndication_init_test.py  syndication_request_test.py  syndication_terminate_test.py  terminate_command_test.py
